--- a/views/header.html
+++ b/views/header.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-md-10">
               <div class="logo">
-                <img src="" alt="">
+                <h1><img src="" alt=""></h1>
               </div>
             </div>
           </div>
