about text added

--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -8,7 +8,7 @@
     <div class="health-design">
       <h3 class="text-uppercase">What is health design</h3>
       <p>Only the fit know how fabulous it feels.</p>
-      <p></p>
+      <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
     </div>
   </div>
 
@@ -42,7 +42,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Cool Sculpting</h3>
             </div>
-            <p></p>
+            <p>Cool Sculpting is a leading fat loss technology that has set new standards for non-invasive fat reduction.</p>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Health Checks &amp; Presentations</h3>
             </div>
-            <p></p>
+            <p>We give corporate/ clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
           </div>
         </div>
 
@@ -62,7 +62,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Health Foods</h3>
             </div>
-            <p></p>
+            <p>New food products are tried, tested and constantly added to our in-house health shop. This includes Selfcare food products and Suman's cookbooks. These products also available online.</p>
           </div>
         </div>
 
@@ -72,7 +72,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Corporate Care Programmes</h3>
             </div>
-            <p></p>
+            <p>We have corporate packages/presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips</p>
           </div>
         </div>
 
@@ -82,7 +82,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Nutrigenomics</h3>
             </div>
-            <p></p>
+            <p>Synchronising our unique DNA blueprint with our diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine</p>
           </div>
         </div>
 
@@ -92,7 +92,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">School Meals</h3>
             </div>
-            <p></p>
+            <p>We are consultants for a few exclusive schools where we outline and create wholesome, fun meals for the school canteen menu. We provide health checks for stressed out teenagers; specially designed and fine-tuned for VIII, IX and X class kids.</p>
           </div>
         </div>
 
@@ -102,7 +102,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Image Consulting</h3>
             </div>
-            <p></p>
+            <p>A Reflection of our personality, our visual appearance creates the first &amp; lasting impression on the opposite person’s mind.</p>
           </div>
         </div>
 
@@ -112,7 +112,7 @@
               <img src="" alt="">
               <h3 class="text-uppercase">Training Programme</h3>
             </div>
-            <p></p>
+            <p>We recently launched a six week training programme for nutritionists.</p>
           </div>
         </div>
 
