--- a/views/footer.html
+++ b/views/footer.html
@@ -1,12 +1,91 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <p>Copyright &copy; {{template.year}}. All Right Resvered.</p>
+            <div class="col-md-2">
+                <div class="menu text-uppercase">
+                    <ul>
+                        <li><a href="" title="Home">home</a></li>
+                        <li><a href="" title="Cool Sclupting">Cool Sclupting</a></li>
+                        <li><a href="" title="Nutrigenomics">Nutrigenomics</a></li>
+                        <li><a href="" title="Image Consulting">Image Consulting</a></li>
+                        <li><a href="" title="Success Stories">Success Stories</a></li>
+                        <li><a href="" title="News">News</a></li>
+                        <li><a href="" title="Blog">Blog</a></li>
+                        <li><a href="" title="Careers">Careers</a></li>
+                        <li><a href="" title="Contact">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-6">
-                <div class="pull-right">
-                    <p>Developed by <a href="http://www.wohlig.com" target="_blank">Wohlig Technology</a>.</p>
+            <div class="col-md-3">
+                <div class="menu2">
+                    <h5>Health Packages</h5>
+                    <div class="submenu text-uppercase">
+                        <ul>
+                            <li><a href="" title="Weight Loss">Weight Loss</a></li>
+                            <li> <a href="" title="Health Management">Health Management</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="menu2">
+                    <h5>About</h5>
+                    <div class="submenu text-uppercase">
+                        <ul>
+                            <li><a href="" title="About Selfcare">About Selfcare</a></li>
+                            <li> <a href="" title="Meet Suman Agarwal">Meet Suman Agarwal</a></li>
+                            <li> <a href="" title="The Self Care Team">The Self Care Team</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="menu2">
+                    <h5>HEALTH SHOP</h5>
+                    <div class="submenu text-uppercase">
+                        <ul>
+                            <li><a href="" title="Food Munchies &amp; Beverages">FOOD MUNCHIES &amp; BEVERAGES</a></li>
+                            <li> <a href="" title="Vitamins &amp; Minerals">VITAMINS &amp; MINERALS</a></li>
+                            <li><a href="" title="Protein Supplement">PROTEIN SUPPLEMENT</a></li>
+                            <li><a href="" title="Books &amp; Gadgets">BOOKS &amp; GADGETS</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="menu2">
+                    <h5>HEALTH KIT</h5>
+                    <div class="submenu text-uppercase">
+                        <ul>
+                            <li><a href="" title="Calorie Meter">CALORIE METER</a></li>
+                            <li> <a href="" title="Recipes">RECIPES</a></li>
+                            <li><a href="" title="Restaurant Menus">RESTAURANT MENUS</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="">
+                    <div class="note">
+                        <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
+                    </div>
+                    <div class="mail">
+                        <form action="" class="form-inline">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="EMAIL">
+                                <button type="submit"><span><i class="fa fa-chevron-right"></i></span></button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="social-links">
+                        <ul>
+                            <li><a href="" traget="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-pinterest-p"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="copyright">
+                       <p>Copyright &copy; Selfcare Support Pvt. Ltd.</p>
+                       <p>All Rights Reserved | Privacy Policy | T&amp;C</p> 
+                    </div>
                 </div>
             </div>
         </div>
