--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -55,7 +55,9 @@
             <p>We give corporate/ clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
@@ -75,7 +77,9 @@
             <p>We have corporate packages/presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips</p>
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
@@ -95,7 +99,9 @@
             <p>We are consultants for a few exclusive schools where we outline and create wholesome, fun meals for the school canteen menu. We provide health checks for stressed out teenagers; specially designed and fine-tuned for VIII, IX and X class kids.</p>
           </div>
         </div>
+      </div>
 
+      <div class="row">
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
@@ -115,9 +121,10 @@
             <p>We recently launched a six week training programme for nutritionists.</p>
           </div>
         </div>
-
       </div>
+
     </div>
+  </div>
   </div>
 
 </section>
