--- a/views/footer.html
+++ b/views/footer.html
@@ -69,7 +69,7 @@
                         <form action="" class="form-inline">
                             <div class="form-group">
                                 <input type="email" class="form-control" placeholder="EMAIL">
-                                <button type="submit"><span><i class="fa fa-chevron-right"></i></span></button>
+                                <button type="submit" class="form-control"><span><i class="fa fa-chevron-right"></i></span></button>
                             </div>
                         </form>
                     </div>
