--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -10,6 +10,65 @@
         </div>
     </div>
     <div class="health-manageselect">
-        
+        <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">alment control</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">healthy ageing</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">lactation</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">senior citizen</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">super kids</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">pregnancy</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">weight gain</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">inch loss</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">cool suclpting</figcaption>
+            </figure>
+        </div>
+         <div class="managecat">
+            <figure>
+                <img src="" alt="" class="img-responsive">
+                <figcaption class="text-center text-uppercase">post cancer</figcaption>
+            </figure>
+        </div>
     </div>
 </div>
